--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="../static/js/vendor/angular.min.js" type="text/javascript"></script>
     <script src="../static/js/todo.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
 </head>
 <body>
     <section ng-controller="TodoController">
@@ -14,6 +15,7 @@
             <input type="text" ng-model="todoDescription"  size="30" placeholder="Task description" required>
             <input class="btn-primary" type="submit" value="add">
         </form>
+        <span>{{remaining()}} of {{todos.length}} remaining</span>
         <ul>
             <li ng-repeat="todo in todos track by $index">
                 <input type="checkbox" ng-model="todo.done">
