--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,6 +22,7 @@
                 <input type="checkbox" ng-model="todo.done">
                 <span class="done-{{ todo.done }}">{{ todo.name }}</span>
                 <span class="done-{{ todo.done }}">{{ todo.description }}</span>
+                <a href="#" ng-click="removeTodo(todo)">X</a>
             </li>
         </ul>
     </section>
