--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,6 +2,7 @@
 <html ng-app="todoApp">
 <head>
     <script src="../static/js/vendor/angular.min.js" type="text/javascript"></script>
+    <script src="../static/js/vendor/xeditable.min.js"></script>
     <script src="../static/js/todo.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
 </head>
@@ -20,8 +21,12 @@
         <ul>
             <li ng-repeat="todo in todos track by $index">
                 <input type="checkbox" ng-model="todo.done">
-                <span class="done-{{ todo.done }}">{{ todo.name }}</span>
-                <span class="done-{{ todo.done }}">{{ todo.description }}</span>
+                <div ng-controller="Ctrl">
+                    <a href="#" editable-text="todo.name" class="done-{{ todo.done }}">{{ todo.name }}</a>
+                </div>
+                <div ng-controller="Ctrl">
+                    <a href="#" editable-text="todo.description" class="done-{{ todo.done }}">{{ todo.description }}</a>
+                </div>
                 <a href="#" ng-click="removeTodo(todo)">X</a>
             </li>
         </ul>
