--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,6 +2,8 @@
 <html ng-app="todoApp">
 <head>
     <script src="../static/js/vendor/angular.min.js" type="text/javascript"></script>
+    <script src="../static/js/vendor/common-local-storage.js"></script>
+    <script src="../static/js/vendor/angular-local-storage.js"></script>
     <script src="../static/js/vendor/xeditable.min.js"></script>
     <script src="../static/js/todo.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
